# aterminalview

./: build.gradle
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  aterm_terminal.c  jni_init.c
src/main/cpp/libvterm/: CMakeLists.txt
src/main/cpp/libvterm/src/: pen.c
src/main/java/aterm/terminal/: AbstractTerminal.java  EditableInputConnection.java  FastScroller.java  InputMethodManagerCompat.java  OutputCallback.java  ScreenCell.java  ScreenLine.java  TerminalCallbacks.java  TerminalClient.java  TerminalKeys.java  TerminalMetrics.java  TerminalView.java  Touch.java  UpdateCallback.java
src/main/res/drawable/: fastscroll_thumb_material.xml  fastscroll_track_material.xml  ic_fastscroll_thumb.xml
src/main/res/values/: attrs.xml  strings.xml
